<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheNewBoston</string>
    <string name="hello">Hello!</string>
    <string name="action_settings">Settings</string>
    <string name="total_is">Your total is 0</string>
    <string name="add">Add</string>
    <string name="sub">Subtract</string>
    <string name="about">About Us</string>
    <string name="prefs">Preferences</string>
    <string name="exit">Exit</string>
    <string name="type_a_command">Type a Command</string>
    <string name="try_command">Try Command</string>
    <string name="toggle_button">ToggleButton</string>
    <string name="invalid">invalid</string>
    <string name="about_string">Sun Lord Entertainment is a holistic based company that specializes in the things you want to do</string>
    <string name="emailAddy">Email address(es):</string>
    <string name="email_intro">Hateful Intro:</string>
    <string name="email_name">Person\'s Name:</string>
    <string name="email_things">Stupid things that this person does:</string>
    <string name="email_action">What you want to do to this person:</string>
    <string name="email_outro">Hateful Outro:</string>
    <string name="email_button_send">Send Email</string>
    <string name="start_activity">Start Activity</string>
    <string name="start_activity_result">Start Activity For Result</string>
    <string name="photo_setwall">Set Wallpaper</string>
    <string name="send_tvquestion">Travis is...</string>
    <string name="send_rcrazy">Crazy</string>
    <string name="send_rsexy">Sexy</string>
    <string name="send_rboth">Both</string>
    <string name="send_return">Return</string>
    <string name="sliding_handle">Handle</string>
    <string name="sliding_check">Checkbox</string>
    <string name="tab1_start">Start</string>
    <string name="tab1_stop">Stop</string>
    <string name="tab3_add_tab">Add a Tab</string>
    <string name="browser_go">Go</string>
    <string name="browser_back">Go Back a Page</string>
    <string name="browser_forward">Go Forward</string>
    <string name="browser_refresh">Refresh Page</string>
    <string name="browser_clear">Clear History</string>
    <string name="sharedpref_save">Save</string>
    <string name="sharedpref_load">Load</string>
    <string name="sharedpref_textview">Load your data</string>
    <string name="save_as">Save As...</string>
    <string name="sql_name">Name</string>
    <string name="sql_hotness">Hotness Scale 1 to 10</string>
    <string name="sql_update">Update SQLite Database</string>
    <string name="sql_view">View</string>
    <string name="sql_enter_rowid">Enter Row ID</string>
    <string name="sql_get_info">Get Information</string>
    <string name="sql_edit_entry">Edit Entry</string>
    <string name="sql_delete_entry">Delete Entry</string>
    <string name="title_activity_http_example">HttpExample</string>
    <string name="hello_world">Hello world!</string>
    <string name="http_load_data">Loading Data</string>

</resources>