<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvSQLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_name" />

    <EditText
        android:id="@+id/etSQLName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvSQLHotness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_hotness" />

    <EditText
        android:id="@+id/etSQLHotness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Button
        android:id="@+id/bSQLUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_update" />

    <Button
        android:id="@+id/bSQLView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_view" />

    <TextView
        android:id="@+id/tvEnterRowId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_enter_rowid" />

    <EditText
        android:id="@+id/etSQLNumberId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/bSQLGetInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_get_info" />

    <Button
        android:id="@+id/bSQLEditEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_edit_entry" />

    <Button
        android:id="@+id/bSQLDeleteEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_delete_entry" />

</LinearLayout>
